force-app/src/objects/Skill__c.object
<CustomObject>
    <fields>
        <fullName>AggregateResultType__c</fullName>
        <label>Aggregate Result Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AggregateScoreField__c</fullName>
        <label>Aggregate Score Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetencyDomain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competency Domain</label>
        <referenceTo>CompetencyDomain__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guideline__c</fullName>
        <label>Guideline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RatingScale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating Scale</label>
        <referenceTo>RatingScale__c</referenceTo>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScoreType__c</fullName>
        <label>Score Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ScoreType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkillSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill Set</label>
        <referenceTo>SkillSet__c</referenceTo>
        <relationshipLabel>Skills</relationshipLabel>
        <relationshipName>Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Skill NEW</label>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <recordTypes>
        <fullName>CalculatedSkill</fullName>
        <active>true</active>
        <description>Calculated skills have proficiency levels derived automatically from system data and predefined rules or formulas. These skills provide an objective, up-to-date measure of capability based on real-time metrics and recorded activities.</description>
        <label>Calculated skill</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConfiguredSkill</fullName>
        <active>true</active>
        <description>Configured skills are part of a skill set used for granular-domain Expertise.</description>
        <label>Configured skill</label>
    </recordTypes>
    <recordTypes>
        <fullName>PerformanceRatedSkill</fullName>
        <active>true</active>
        <description>Performance-rated skills are specific abilities and competencies evaluated during feedback sessions and performance reviews. These skills are essential for assessing the effectiveness and contributions of individuals within the organization.</description>
        <label>Performance-rated skill</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>